Table users {
    id integer [primary key, increment]
    pseudo text
    email text
    password text
    provider text
    created_at interger
    updated_at interger
}

// ───────── CONTENU (catalogue, saisi à la main en V1) ─────────Table users {
    id integer [primary key, increment]
    pseudo text
    email text
    password text
    provider text
    created_at interger
    updated_at interger
}

// ───────── CONTENU (catalogue, saisi à la main en V1) ─────────
Table novel {
  id              integer     [pk, increment]
  title           text
  author          text
  description     text
  cover_image_url text
  status          enum        // ONGOING · COMPLETED · PAUSED  (= "En pause")
  is_featured     boolean     // "à la une" sur l'Accueil
  created_at      timestamptz
  updated_at      timestamptz
}

Table genre {
  id   integer [pk, increment]
  name text    [unique]
}

Table novel_genre {                        // M:N  novel ⇄ genre
  novel_id integer [ref: > novel.id]
  genre_id integer [ref: > genre.id]
  // PK (novel_id, genre_id)
}

Table volume {                             // tome
  id         integer [pk, increment]
  novel_id   integer [ref: > novel.id]
  title      text
  position   integer                       // ordre dans le roman
}

Table chapter {
  id         integer [pk, increment]
  volume_id  integer [ref: > volume.id]
  title      text
  position   integer                       // ordre dans le tome
  content    text
  created_at timestamptz                   // pour "derniers chapitres"
  updated_at timestamptz
}

// ───────── CÔTÉ UTILISATEUR ─────────
// Table users { ... existant ... }

Table library_entry {                      // bibliothèque perso ("suivis")
  user_id    integer [ref: > users.id]
  novel_id   integer [ref: > novel.id]
  status     enum                          // PLAN_TO_READ · READING · COMPLETED · PAUSED
  added_at   timestamptz
  updated_at timestamptz
  // PK (user_id, novel_id)
}

Table category {                           // étagères créées par l'user
  id         integer [pk, increment]
  user_id    integer [ref: > users.id]
  name       text
}

Table category_novel {                     // M:N  category ⇄ novel
  category_id integer [ref: > category.id]
  novel_id    integer [ref: > novel.id]
  // PK (category_id, novel_id)
}

Table chapter_progress {                   // lecture : lu/position/historique
  user_id         integer [ref: > users.id]
  chapter_id      integer [ref: > chapter.id]
  is_read         boolean
  scroll_position integer                  // position de reprise
  read_at         timestamptz
  // PK (user_id, chapter_id)
}
Table novel {
  id              integer     [pk, increment]
  title           text
  author          text
  description     text
  cover_image_url text
  status          enum        // ONGOING · COMPLETED · PAUSED  (= "En pause")
  is_featured     boolean     // "à la une" sur l'Accueil
  created_at      timestamptz
  updated_at      timestamptz
}

Table genre {
  id   integer [pk, increment]
  name text    [unique]
}

Table novel_genre {                        // M:N  novel ⇄ genre
  novel_id integer [ref: > novel.id]
  genre_id integer [ref: > genre.id]
  // PK (novel_id, genre_id)
}

Table volume {                             // tome
  id         integer [pk, increment]
  novel_id   integer [ref: > novel.id]
  title      text
  position   integer                       // ordre dans le roman
}

Table chapter {
  id         integer [pk, increment]
  volume_id  integer [ref: > volume.id]
  title      text
  position   integer                       // ordre dans le tome
  content    text
  created_at timestamptz                   // pour "derniers chapitres"
  updated_at timestamptz
}

// ───────── CÔTÉ UTILISATEUR ─────────
// Table users { ... existant ... }

Table library_entry {                      // bibliothèque perso ("suivis")
  user_id    integer [ref: > users.id]
  novel_id   integer [ref: > novel.id]
  status     enum                          // PLAN_TO_READ · READING · COMPLETED · PAUSED
  added_at   timestamptz
  updated_at timestamptz
  // PK (user_id, novel_id)
}

Table category {                           // étagères créées par l'user
  id         integer [pk, increment]
  user_id    integer [ref: > users.id]
  name       text
}

Table category_novel {                     // M:N  category ⇄ novel
  category_id integer [ref: > category.id]
  novel_id    integer [ref: > novel.id]
  // PK (category_id, novel_id)
}

Table chapter_progress {                   // lecture : lu/position/historique
  user_id         integer [ref: > users.id]
  chapter_id      integer [ref: > chapter.id]
  is_read         boolean
  scroll_position integer                  // position de reprise
  read_at         timestamptz
  // PK (user_id, chapter_id)
}